2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (grub_ntfs_mount): Support 256-byte sectors,
	as long as cluster size is multiple of 512 bytes.

2012-04-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Fix locale directory.

2012-04-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (map): Make static.

2012-04-23  Bean  <bean123ch@gmail.com>

	* util/grub-fstest.c (fstest): Add missing break.

2012-04-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Fix hurd build.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_size) [__GNU__]: Do
	not define nr variable.
	* util/getroot.c [__GNU__] (strip_extra_slashes, xgetcwd, exec_pipe,
	find_root_devices_from_poolname, find_root_devices_from_libzfs,
	grub_find_device): Do not define.

2012-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix kfreebsd compile and behaviour.

	* grub-core/kern/emu/hostdisk.c (grub_util_follow_gpart_up): Fix
	format-security.
	* util/getroot.c: Fix wait.h include.
	(grub_guess_root_devices): Error if grub_find_device fails.
	(grub_util_get_geom_abstraction): Fix shadowing and format-security.
	(grub_util_get_dev_abstraction): Likewise.
	(grub_util_pull_device): Likewise.
	(grub_util_get_grub_dev): Likewise.
	* util/lvm.c (grub_util_lvm_isvolume): Likewise.

2012-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix and unify wholedisk detection.

	* util/getroot.c (convert_system_partition_to_system_disk): New argument
	is_part. All users updated.
	(device_is_wholedisk): Removed.
	(grub_util_biosdisk_get_grub_dev): Use is_part.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_write): Fix opening
	mode.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta4.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_wrap.c (grub_cmd_search): Handle old
	--fs-uuid --set UUID syntax.
